--- a/favorite/src/main/AndroidManifest.xml
+++ b/favorite/src/main/AndroidManifest.xml
@@ -10,4 +10,11 @@
         </dist:delivery>
         <dist:fusing dist:include="true" />
     </dist:module>
+
+    <application>
+
+        <activity
+            android:name=".FavoriteActivity"
+            android:exported="false" />
+    </application>
 </manifest>
