--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,9 @@ orbs:
  
 jobs:
   build:
-    executor: android/android-machine
+    executor: 
+        name: android/android-machine
+        tag: 2021.10.1
     steps:
       - checkout
       - restore_cache:
