--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     ext.multidex_version = "2.0.1"
     ext.kotlin_coroutines_version = '1.7.2'
     ext.lifecycle_version = '1.1.0'
+    ext.test_core = '1.5.0'
 
     ext.cardview_version = "1.0.0"
     ext.recyclerview_version = "1.1.0"
